ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contract/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <formula>Payment_Amount_1__c + Payment_Amount_2__c + Payment_Amount_3__c + Payment_Amount_4__c + Payment_Amount_5__c +  Payment_Amount_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>