ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contract/fields/Payment_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Amount__c</fullName>
    <label>Payment #1 Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>