ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contract/fields/Payment_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Date__c</fullName>
    <label>Payment #1 Date</label>
    <type>Date</type>
</CustomField>