ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contract/fields/Payment_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_3_Date__c</fullName>
    <label>Payment #3 Date</label>
    <type>Date</type>
</CustomField>