ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contract/fields/Payment_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_1__c</fullName>
    <label>Payment Amount 1</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>